examples/errors/e4.avm
push int8(34) dump print
push push34